--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,7 @@ source:
   sha256: 3be672407a7aef60b64ce4b39704b32816b0b28f61ebffd4fbd02c8012901e0d
 
 build:
-  number: 1
-  skip: true  # [win]
+  number: 2
   run_exports:
     - {{ pin_subpackage(name, max_pin='x.x') }}
 
@@ -34,7 +33,9 @@ test:
   requires:
     - pkg-config
   commands:
-    - pkg-config --modversion {{ name }}
+    - pkg-config --modversion {{ name }} # [unix]
+    - test $PREFIX/include/collada-dom2.5 # [unix]
+    - if not exist %PREFIX%\\Library\\include\\collada-dom2.5 exit 1 # [win]
 
 about:
   home: https://sourceforge.net/p/collada-dom
