Backport PR 43 for boost 1.86 support

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,9 @@ package:
 source:
   url: https://github.com/rdiankov/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: 3be672407a7aef60b64ce4b39704b32816b0b28f61ebffd4fbd02c8012901e0d
+  patches:
+    # Backport of https://github.com/rdiankov/collada-dom/pull/43
+    - patches/43.patch
 
 build:
   number: 9
@@ -53,3 +56,5 @@ about:
 extra:
   recipe-maintainers:
     - jcarpent
+    - traversaro
+
